--- a/app/src/main/res/layout/activity_messeage.xml
+++ b/app/src/main/res/layout/activity_messeage.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.chat.messeage.MesseageActivity">
+    tools:context=".ui.chat.messeages.MesseageActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -87,5 +87,7 @@
         </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include layout="@layout/progress_bar" />
 
 </RelativeLayout>
