--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -7,13 +7,10 @@
     tools:context=".ui.chat.chatList.ChatListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recycler_view" />
+        android:layout_height="match_parent" />
 
-    <include layout="@layout/progress_bar"
-        android:visibility="visible"
-
-        />
+    <include layout="@layout/progress_bar" />
 
 </RelativeLayout>
