--- a/app/src/main/res/layout/messeage_item_left.xml
+++ b/app/src/main/res/layout/messeage_item_left.xml
@@ -1,37 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:paddingTop="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/avatar_left"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/avatar"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <com.autofit.et.lib.AutoFitEditText
-        android:id="@+id/messeage_item_left_text"
-        android:layout_alignParentStart="true"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:background="@drawable/messeage_background_left"
-        android:isScrollContainer="false"
-        android:inputType="textMultiLine|textNoSuggestions"
-        android:padding="10dp"
-        android:textColor="@color/colorWhiteDarkMaterial"
-        app:layout_constraintLeft_toRightOf="@id/avatar"
+        android:id="@+id/main_content"
+        android:layout_marginStart="4dp"
+        app:layout_constraintLeft_toRightOf="@id/avatar_left"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+
+        >
+        <TextView
+            android:id="@+id/sender_name_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="4dp"
+            android:textAlignment="textStart"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/messeage_item_left_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/messeage_item_left_text"
+            android:background="@drawable/messeage_background_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="240dp"
+            android:padding="8dp"
+            android:textColor="#ffffff"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@id/sender_name_left"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/send_time_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:layout_marginStart="4dp"
+            android:textAlignment="textStart"
+            app:layout_constraintLeft_toRightOf="@id/messeage_item_left_text"
+            app:layout_constraintBottom_toBottomOf="@id/messeage_item_left_text"
+
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
