--- a/app/src/main/res/layout/messeage_item_right.xml
+++ b/app/src/main/res/layout/messeage_item_right.xml
@@ -1,37 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:paddingTop="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/avatar_right"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/avatar"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <com.autofit.et.lib.AutoFitEditText
-        android:id="@+id/messeage_item_right_text"
-        android:layout_alignParentEnd="true"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:background="@drawable/messeage_background_right"
-        android:isScrollContainer="false"
-        android:inputType="textMultiLine|textNoSuggestions"
-        android:padding="10dp"
-        android:textColor="@color/colorWhiteDarkMaterial"
-        app:layout_constraintRight_toLeftOf="@id/avatar"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/avatar_right"
+        android:id="@+id/main_part"
+        android:layout_marginEnd="4dp"
+
+        >
+        <TextView
+            android:id="@+id/sender_name_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/messeage_item_right_text"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/messeage_item_right_text"
+            android:background="@drawable/messeage_background_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="240dp"
+            android:minWidth="50dp"
+            android:padding="8dp"
+            android:textColor="#ffffff"
+            app:layout_constraintTop_toTopOf="@id/sender_name_right"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/send_time_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            app:layout_constraintRight_toLeftOf="@+id/messeage_item_right_text"
+            android:layout_marginEnd="4dp"
+            android:textAlignment="textEnd"
+            app:layout_constraintBottom_toBottomOf="@+id/messeage_item_right_text" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
