--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -31,10 +31,23 @@
             android:id="@+id/nameChat"
             app:layout_constraintLeft_toRightOf="@id/multi_image_view"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/last_message"
             android:layout_marginStart="10dp"
             android:textSize="20sp"
+            android:textColor="@color/colorDark"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/last_message"
+            app:layout_constraintLeft_toRightOf="@id/multi_image_view"
+            app:layout_constraintTop_toBottomOf="@id/nameChat"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
