--- a/app/src/main/res/layout/item_trip_list.xml
+++ b/app/src/main/res/layout/item_trip_list.xml
@@ -21,7 +21,7 @@
         <View
             android:id="@+id/status"
             android:layout_width="6dp"
-            android:layout_height="90dp"
+            android:layout_height="110dp"
             android:background="@drawable/status_red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -67,6 +67,15 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/trip_city" />
 
+            <TextView
+                android:id="@+id/trip_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/trip_author"
+                android:text="Czas: 2012.08.12 12:45 - 2012.08.12 12:46" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/card_bottom"
                 android:layout_width="match_parent"
@@ -77,7 +86,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/trip_author">
+                app:layout_constraintTop_toBottomOf="@id/trip_time">
 
                 <TextView
                     android:id="@+id/trip_people"
@@ -119,6 +128,16 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <RelativeLayout
+            android:id="@+id/trip_outdate_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/whiteTransparent55"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
